--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,7 @@
             <th>Email</th>
             <th>Number</th>
             <th>Action</th>
+            <th>&nbsp;</th>
             </thead>
             <tbody>
             <tr>
@@ -74,12 +75,23 @@
                 <td>
                     <button class="btn btn-primary" ng-click="addContact()">Add Contacts</button>
                 </td>
+                <td>
+                    <button class="btn btn-info" ng-click="update()">Update</button>
+                    &nbsp;&nbsp;
+                    <button class="btn btn-info" ng-click="deselect()">Clear</button>
+                </td>
 
             </tr>
             <tr ng-repeat="contact in contactlist">
                 <td>{{contact.name}}</td>
                 <td>{{contact.email}}</td>
                 <td>{{contact.number}}</td>
+                <td>
+                    <button class="btn btn-danger" ng-click="remove(contact._id)">Remove</button>
+                </td>
+                <td>
+                    <button class="btn btn-warning" ng-click="edit(contact._id)">Edit</button>
+                </td>
             </tr>
 
             </tbody>
